prueba de env 2

--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
 </head>
 
 <body>
+<script src="/env.js"></script>
+
 <div id="root"></div>
 
 <!-- Vite cargará automáticamente tu build, no agregues script extra aquí -->
+ <script src="/env-runtime.js"></script>
 <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
