prueba de env 4

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 </head>
 
 <body>
-<script src="/env.js"></script>
+<script src="/env-runtime.js" type="module"></script>
+
 
 <div id="root"></div>
 
