--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 </head>
 
 <body>
-<script src="/env-runtime.js" type="module"></script>
-
+<script src="/env.js" type="module"></script>
 
 <div id="root"></div>
 
