--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="manifest" href="/manifest.json" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon.png" />
+  <link rel="icon" type="image/png" href="/fehura_logo.png" />
+  <link rel="shortcut icon" type="image/png" href="/fehura_logo.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/fehura_logo.png" />
 
   <title>Fehura Dashboard</title>
 
